fix z-index https://trello.com/c/6LJLAMQp/1782-disconnected-banner-no-longer-working

--- a/shared/ui/styles/stream.less
+++ b/shared/ui/styles/stream.less
@@ -79,7 +79,7 @@
 		bottom: 0;
 		padding: 0;
 		width: 100%;
-		z-index: 30;
+		z-index: 46;
 	}
 
 	#offline-banner {
